--- a/Example/Podfile
+++ b/Example/Podfile
@@ -2,6 +2,7 @@ source 'https://github.com/CocoaPods/Specs.git'
 
 target 'MXSegmentedPager', :exclusive => true do
   pod "MXSegmentedPager", :path => "../"
+  pod 'CSStickyHeaderFlowLayout'
 end
 
 target 'Tests', :exclusive => true do
