--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ before_install:
 install:
 - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
 script:
-- set -o pipefail && xcodebuild test -workspace Example/MXSegmentedPager.xcworkspace -scheme MXSegmentedPager-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty -c
+- set -o pipefail && xcodebuild test -workspace Example/MXSegmentedPager.xcworkspace -scheme MXSegmentedPager-Example -sdk iphonesimulator8.2 ONLY_ACTIVE_ARCH=NO | xcpretty -c
 - pod lib lint --quick
