--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,6 @@ DerivedData
 #
 Pods/
 Example/Pods/
+Example/Podfile.lock
 Example/MXSegmentedPager.xcworkspace
 Example-Swift/MXSegmentedPager-Swift.xcworkspace
