--- a/Example-Swift/Podfile
+++ b/Example-Swift/Podfile
@@ -1,4 +1,7 @@
 source 'https://github.com/CocoaPods/Specs.git'
 use_frameworks!
 
-pod 'MXSegmentedPager', :path => '../'
+target 'MXSegmentedPager-Swift' do
+  pod 'MXSegmentedPager', :path => '../'
+  
+end
