--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ before_install:
 install:
 - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
 script:
-- set -o pipefail && xcodebuild -workspace Example-Swift/MXSegmentedPager-Swift.xcworkspace -scheme MXSegmentedPager-Swift -sdk iphonesimulator -configuration Release -destination "platform=iOS Simulator,name=iPhone 6" test | xcpretty -c
+- set -o pipefail && xcodebuild -workspace Example/MXSegmentedPager.xcworkspace -scheme MXSegmentedPager -sdk iphonesimulator -configuration Release -destination "platform=iOS Simulator,name=iPhone 6" | xcpretty -c
 - pod lib lint --quick
