--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,29 @@
 language: objective-c
 osx_image: xcode8
+
 env: 
-global:
-- FRAMEWORK_NAME=MXSegmentedPager
+  global:
+  - FRAMEWORK_NAME=MXSegmentedPager
+
 before_install:
 - brew update
 - brew outdated carthage || brew upgrade carthage
+
 install:
 - gem install cocoapods
 - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
+
+before_script:
+- carthage bootstrap
+
 script:
 - set -o pipefail && xcodebuild -project MXSegmentedPager.xcodeproj -scheme $FRAMEWORK_NAME -sdk iphonesimulator10.0 -configuration Release | xcpretty -c
 - pod lib lint --quick
+
 before_deploy:
 - carthage build --no-skip-current
 - carthage archive $FRAMEWORK_NAME
+
 deploy:
   provider: releases
   api_key:
