--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: objective-c
-osx_image: xcode8.3
+osx_image: xcode10.2
 
 env: 
   global:
@@ -11,13 +11,13 @@ before_install:
 
 install:
 - gem install cocoapods
-- gem install xcpretty --no-rdoc --no-ri --no-document --quiet
+- gem install xcpretty --no-document --quiet
 
 before_script:
 - carthage bootstrap
 
 script:
-- set -o pipefail && xcodebuild -project MXSegmentedPager.xcodeproj -scheme $FRAMEWORK_NAME -sdk iphonesimulator10.3 -configuration Release | xcpretty -c
+- set -o pipefail && xcodebuild -project MXSegmentedPager.xcodeproj -scheme $FRAMEWORK_NAME -sdk iphonesimulator12.2 -configuration Release | xcpretty -c
 - pod lib lint --quick
 
 before_deploy:
